--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li>Task 3</li> -->
             </ul>
         </div>
+        <h3>Developed By <a href="https://github.com/AnshulKhanna3008">Anshul Khanna</a></h3>
     </div>
 </body>
 
